--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,13 +2,17 @@
     border: solid 5px rgb(85, 85, 85);
     border-radius: 20px;
     background-color: white;
+    padding: 30px;
 }
 
 #yourGuess-text, #computerGuess-text{
     text-align: center;
-    font-size: 80px;
+    font-size: 50px;
 }
 
-.display-4 {
+/* .col {
+    width: 30%;
+} */
+.display-4, #gameRounds {
     text-align: center;
 }
